# Slimder-Man

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/slimder_man/: __init__.py  cli.py
src/slimder_man/adapters/: base.py  generic_hf_moe.py  hf_dummy.py  qwen3_next.py  registry.py  (+1 more)
tests/fixtures/: __init__.py  hf_dummy_moe.py
tests/smoke/: test_checkpoint_resume.py  test_cli_end_to_end_cpu.py  test_one_gpu_tiny.py  test_remote_ssh_dryrun.py  test_tiny_moe_analyze_compress_train.py  test_ui_config_generation.py
tests/unit/: test_architecture_introspection.py  test_bit_allocator.py  test_calibration_artifacts.py  test_cli_full_model_dryrun.py  test_cli_progressive_run.py  test_compute_guidance.py  test_config_schema.py  test_depth_pruning.py  test_determinism.py  test_distill_flags.py  test_expert_merging.py  test_expert_metric_selection.py  test_expert_metrics.py  test_expert_similarity.py  test_generic_hf_compression.py  test_hf_dummy_moe_adapter.py  test_loss_schedules.py  test_manifest_roundtrip.py  test_mtp_loss_alignment.py  test_param_estimator.py  test_progressive_planner.py  test_progressive_stage_runner.py  test_quant_cli.py  test_quant_export_backends.py  test_quant_fake_backend.py  test_quant_saliency.py  test_qwen3_next_fixture_introspection.py  test_recommender_candidates.py  test_remote_dryrun.py  test_remote_worker_job_execution.py  test_resume_fresh_process.py  test_router_transform.py  test_tokenizer_sampling.py  test_train_loop_entrypoint.py  test_ui_full_config.py  test_width_importance.py  test_width_slicing.py
(+60 files in other folders)
